--- a/resume.css
+++ b/resume.css
@@ -2,7 +2,7 @@ h1{
  font-size:48px;
  font-family:'monaco', monospace;
  text-align:center;
-  
+
 }
 h2{
   font-size: 36px;
@@ -18,6 +18,7 @@ h3{
   font-weight: lighter;
   font-family:'monaco', monospace;
   text-decoration: underline;
+  color: red;
 }
 lo{
   font-size: 26px;
