--- a/css/links.css
+++ b/css/links.css
@@ -5,7 +5,7 @@ h1{
   text-align:center;
   text-decoration:underline;
   color:black;
-  background:	#808080;
+  background:#D7D7D8;
 }
 body{
   text-align:center;
@@ -14,6 +14,6 @@ body{
 }
 a{
   display: block;
-  
+
 }
 ]
