--- a/css/index.css
+++ b/css/index.css
@@ -8,13 +8,18 @@ div{
 a{
   color:black;
 }
+img{
+  width: 280px;
+  border-radius: 150px;
+  float: left;
+  margin-right: 20px;
+}
 h1{
   text-align:center;
   font-family:optima;
   font-size:32px;
   color:green;
   font-style:italic;
-  text-decoration: underline;
 }
 span{
   font-size:24px;
