--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+
+
 div{
   background-color:silver;
   font-size:24px;
@@ -7,12 +9,15 @@ div{
 }
 a{
   color:black;
+  text-align: center;
+  padding: 16px 20px;
 }
 img{
   width: 280px;
-  border-radius: 150px;
+  border-radius: 50px;
   float: left;
   margin-right: 20px;
+  margin-top: 50px;
 }
 h1{
   text-align:center;
@@ -20,11 +25,13 @@ h1{
   font-size:32px;
   color:green;
   font-style:italic;
+  margin-top: 75px;
 }
 span{
   font-size:24px;
   font-family:optima;
   text-align:center;
+
 }
 lo{
   text-align:left;
