--- a/css/projects.css
+++ b/css/projects.css
@@ -3,8 +3,8 @@ h1{
  font-style: italic;
  font-family: optima;
  text-align: center;
- color:pink;
- background-color:#696969;
+ color:#FF69B4;
+ background-color:#D3D3D3;
 }
 a{
   display: block;
