--- a/css/home.css
+++ b/css/home.css
@@ -4,8 +4,37 @@ div{
   color:black;
   font-family:optima;
   font-weight: bold;
-  text-align: center;
 }
 a{
   color:black;
-  padding: 25px;
+  text-align: center;
+  padding: 16px 20px;
+}
+img{
+  width: 280px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 20px;
+  margin-top: 25px;
+}
+h1{
+  text-align:center;
+  font-family:optima;
+  font-size:32px;
+  color:green;
+  font-style:italic;
+  margin-top: 75px;
+}
+span{
+  font-size:24px;
+  font-family:optima;
+  text-align:center;
+  margin-top: 50px:
+
+}
+lo{
+  text-align:left;
+  font-family:optima;
+  font-size:24px;
+  text-align:left;
+}
