--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-
-
 div{
   background-color:silver;
   font-size:24px;
@@ -12,30 +10,19 @@ a{
   text-align: center;
   padding: 16px 20px;
 }
-img{
-  width: 280px;
-  border-radius: 50px;
-  float: left;
-  margin-right: 20px;
-  margin-top: 50px;
-}
 h1{
-  text-align:center;
-  font-family:optima;
-  font-size:32px;
+  font-size: 36px;
+  font-family: optima;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
   color:green;
-  font-style:italic;
-  margin-top: 75px;
-}
-span{
-  font-size:24px;
-  font-family:optima;
-  text-align:center;
 
 }
-lo{
-  text-align:left;
-  font-family:optima;
-  font-size:24px;
-  text-align:left;
+h2{
+  font-size: 36px;
+  font-family: optima;
+  text-align: center;
+  font-style: normal;
+  font-weight: lighter;
 }
