--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,15 @@
+div{
+  background-color:silver;
+  font-size:24px;
+  color:black;
+  font-family:optima;
+  font-weight: bold;
+}
+a{
+  color:black;
+  text-align: center;
+  padding: 16px 20px;
+}
 h1{
   font-size: 36px;
   font-family:optima;
@@ -11,7 +23,4 @@ body{
   text-align:center;
   font-family:optima;
   font-size: 36px;
-}
-a{
-  display: block;
 }
