--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,15 @@
+div{
+  background-color:silver;
+  font-size:24px;
+  color:black;
+  font-family:optima;
+  font-weight: bold;
+}
+a{
+  color:black;
+  text-align: center;
+  padding: 16px 20px;
+}
 h1{
  font-size: 36px;
  font-style: italic;
@@ -5,10 +17,4 @@ h1{
  text-align: center;
  color:#FF69B4;
  background-color:#D3D3D3;
-}
-a{
-  display: block;
-  text-align: center;
-  font-size: 36px;
-  font-style: italic;
 }
