--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,14 @@
+center{
+  background-color:silver;
+  font-size:24px;
+  color:black;
+  font-family:optima;
+  font-weight: bold;
+}
+a{
+  color:black;
+  text-align: center;
+  padding: 16px 20px;
 h1{
  font-size:36px;
  font-family:optima;
@@ -56,5 +67,4 @@ div1{
   font-weight: normal;
   font-family:optima;
   color:green;
-  font-style: italic;
 }
