--- a/css/home.css
+++ b/css/home.css
@@ -1,67 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  font-family: optima;
-  height: 100vh;
-  background-color: #ffffff;
-  font-family: optima;
-}
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #ffffff;
-  height: 70px;
-  padding: 30px 25px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-}
-.nav--main a {
-  text-decoration: none;
-  color: #5e5e5e;
-}
-.nav--list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-}
-.nav--item {
-  padding: 1em;
-}
-.nav--item a {
-  text-decoration: none;
-  color: #777777;
-}
-section {
-  text-align: center;
-}
-.main h1 {
-  color: #4b4b4b;
-}
-.main--title {
-  margin: 45px 0 0 0;
-  font-size: 35px;
-}
-.main--subtitle {
-  color: #5e5e5e;
-  margin-top: 5px;
-}
-.about {
-  width: 700px;
-  margin: auto;
-  margin-top: 100px;
-}
-.about--title {
-  color: #4b4b4b;
-}
-p {
-  color: #5e5e5e;
-  font-family:optima;
-}
-.paragraph {
-  text-align: left;
-}
+
 div{
   background-color:silver;
   font-size:24px;
@@ -77,14 +14,14 @@ img{
   width: 280px;
   border-radius: 50px;
   float: left;
-  margin-right: 20px;
+  margin-right: 30px;
   margin-top: 25px;
 }
 h1{
   text-align:center;
   font-family:optima;
   font-size:32px;
-  color:green;
+  color:red;
   font-style:italic;
   margin-top: 75px;
 }
@@ -93,7 +30,6 @@ span{
   font-family:optima;
   text-align:center;
   margin-top: 50px:
-
 }
 lo{
   text-align:left;
